--- a/src/BoardGame-Manager.fsproj
+++ b/src/BoardGame-Manager.fsproj
@@ -7,6 +7,8 @@
     <WarnOn>3390;$(WarnOn)</WarnOn>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Core/Types.fs"/>
+    <Compile Include="View/MainView.fs"/>
     <Compile Include="Program.fs" />
   </ItemGroup>
   <Import Project="..\.paket\Paket.Restore.targets" />
