--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,8 @@ trim_trailing_whitespace = true
 trim_trailing_whitespace = false
 
 [*.fs]
-fsharp_single_argument_web_mode = true
+fsharp_multiline_block_brackets_on_same_column = true
+fsharp_experimental_stroustrup_style = true
+fsharp_keep_max_number_of_blank_lines = 1
 indent_style = space
 indent_size = 4
