Revert introduction of stroustrup

--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,6 @@ trim_trailing_whitespace = false
 
 [*.fs]
 fsharp_keep_max_number_of_blank_lines = 1
-fsharp_multiline_bracket_style = stroustrup
+fsharp_multiline_bracket_style = aligned
 indent_style = space
 indent_size = 4
